samples/_failures_safe/1761796132_3510d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8dcab59.c: In function ‘main’:
./samples/SAFE/__tmp_a8dcab59.c:165:34: error: expected ‘)’ at end of input
  165 |         if (tokens[j].type == END
      |            ~                     ^
      |                                  )
./samples/SAFE/__tmp_a8dcab59.c:165:9: error: expected declaration or statement at end of input
  165 |         if (tokens[j].type == END
      |         ^~
./samples/SAFE/__tmp_a8dcab59.c:165:9: error: expected declaration or statement at end of input
